# railway-booking

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
backend/: .dockerignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/apps/bookings/: admin.py  apps.py  exceptions.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/bookings/migrations/: 0001_initial.py
backend/apps/core/: admin.py  apps.py  availability.py  cache.py  db_utils.py  exceptions.py  metrics.py  middleware.py  models.py  pricing.py  signals.py  timetable.py  types.py
backend/apps/core/migrations/: 0001_initial.py
backend/apps/routes/: admin.py  apps.py  exceptions.py  models.py  services.py
backend/apps/routes/migrations/: 0001_initial.py
backend/apps/stations/: admin.py  apps.py  exceptions.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/stations/migrations/: 0001_initial.py
backend/apps/trains/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/trains/migrations/: 0001_initial.py
backend/config/: settings.py  settings_test.py  urls.py
backend/fixtures/: demo.json
backend/stubs/djmoney/models/: fields.pyi
backend/tests/: conftest.py  factories.py  test_admin.py  test_admin_validation.py  test_api.py  test_availability.py  test_cache.py  test_create_order.py  test_list_seats.py  test_pricing.py  test_queries.py  test_search_departures.py  test_services.py  test_timetable.py
frontend/: .dockerignore  .env.example  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
frontend/.husky/: pre-commit
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/app/: main.tsx  routes.tsx
frontend/src/app/i18n/: index.ts
frontend/src/app/i18n/locales/: en.json  ru.json
frontend/src/app/providers/: sentry.ts
frontend/src/components/: StationAutocomplete.tsx
frontend/src/entities/passenger/ui/: PassengerFormFields.tsx
frontend/src/entities/seat/lib/: seatKey.ts
frontend/src/entities/seat/ui/: CarPanel.tsx
frontend/src/entities/station/model/: stations-cache.ts
frontend/src/entities/station/ui/: StationAutocomplete.tsx
frontend/src/features/book-order/model/: useOrderSubmit.ts
frontend/src/features/search-departures/model/: useSearch.ts
frontend/src/features/select-seat/model/: useSeatPricing.ts  useSeatsForm.ts
frontend/src/features/switch-language/ui/: LanguageSwitcher.tsx
frontend/src/pages/: ConfirmationPage.tsx  SearchPage.tsx  SeatsPage.tsx
frontend/src/pages/confirmation/ui/: ConfirmationPage.tsx
frontend/src/pages/error/ui/: ErrorPage.tsx
frontend/src/pages/not-found/ui/: NotFoundPage.tsx
frontend/src/pages/search/ui/: SearchPage.tsx
frontend/src/pages/seats/model/: useSeatsPage.ts
frontend/src/pages/seats/ui/: SeatsPage.tsx
frontend/src/shared/api/: client.ts  errors.ts  schemas.ts
frontend/src/shared/config/: index.ts
frontend/src/shared/lib/: format.ts  useToggleSet.ts  validation.ts
frontend/src/tests/: App.test.tsx
frontend/src/types/: index.ts
frontend/src/widgets/confirmation-view/ui/: ConfirmationView.tsx
frontend/src/widgets/departure-hero/ui/: DepartureHero.tsx
frontend/src/widgets/departures-list/ui/: DeparturesList.tsx
frontend/src/widgets/layout/ui/: Layout.tsx  RootLayout.tsx
frontend/src/widgets/passenger-details/ui/: PassengerDetailsSection.tsx
frontend/src/widgets/search-form/ui/: SearchForm.tsx
frontend/src/widgets/seats-action-bar/ui/: SeatsActionBar.tsx
frontend/src/widgets/seats-list/ui/: SeatsList.tsx
