[project]
name = "railway-booking-backend"
version = "0.1.0"
description = "Railway booking system backend"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0,<6.1",
    "djangorestframework>=3.15",
    "psycopg[c,pool]>=3.2",
    "gunicorn>=23.0",
    "python-dotenv>=1.0",
    "whitenoise>=6.12.0",
    "django-constance>=4.3",
    "redis[hiredis]>=7.4.0",
    "django-stubs-ext>=6.0.2",
]

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=6.0.2",
    "djangorestframework-stubs[compatible-mypy]>=3.16.9",
    "mypy>=1.20.0",
    "psycopg[binary,pool]>=3.2",
    "pytest>=8.3",
    "pytest-django>=4.9",
    "ruff>=0.7",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = [
    "**/migrations/**",
    "staticfiles",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "DJ",   # flake8-django
    "RUF",  # ruff-specific
    "N",    # pep8-naming
    "TID",  # tidy-imports
    "PT",   # pytest-style
]
ignore = [
    "E501",   # handled by formatter
    "RUF012", # mutable default value for class attribute (DRF/Django patterns)
    "B008",   # function call in default arg (DRF/Django patterns)
    "DJ001",  # nullable CharField (allowed by spec)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PT011"]
"**/migrations/**" = ["E501", "N806"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings_test"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
filterwarnings = [
    "error",
]
markers = [
    "slow: marks tests as slow",
]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.14"
mypy_path = "."
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]
strict = true
warn_unreachable = true
disallow_any_generics = true
disallow_untyped_defs = true
warn_return_any = true
exclude = ["migrations/"]

[[tool.mypy.overrides]]
module = ["constance.*", "rest_framework.*"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings_test"
