[project]
name = "railway-booking-backend"
version = "0.1.0"
description = "Railway booking system backend"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0,<6.1",
    "djangorestframework>=3.15",
    "psycopg[c,pool]>=3.2",
    "gunicorn>=23.0",
    "python-dotenv>=1.0",
    "whitenoise>=6.12.0",
    "django-constance>=4.3",
    "redis[hiredis]>=7.4.0",
    "django-stubs-ext>=6.0.2",
    "django-money>=3.6.0",
]

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=6.0.2",
    "djangorestframework-stubs[compatible-mypy]>=3.16.9",
    "mypy>=1.20.0",
    "psycopg[binary,pool]>=3.2",
    "pytest>=8.3",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.9",
    "pytest-xdist>=3.8.0",
    "ruff>=0.7",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = [
    "**/migrations/**",
    "staticfiles",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "DJ",   # flake8-django
    "RUF",  # ruff-specific
    "N",    # pep8-naming
    "TID",  # tidy-imports
    "PT",   # pytest-style
]
ignore = [
    "E501",   # handled by formatter
    "RUF012", # mutable default value for class attribute (DRF/Django patterns)
    "B008",   # function call in default arg (DRF/Django patterns)
    "DJ001",  # nullable CharField (allowed by spec)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PT011"]
"**/migrations/**" = ["E501", "N806"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings_test"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=apps",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=90",
]
filterwarnings = [
    "error",
]
markers = [
    "slow: marks tests as slow",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["apps"]
omit = [
    "*/migrations/*",
    "*/admin.py",
    "config/*",
    "manage.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "def __str__",
]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.14"
mypy_path = "."
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]
strict = true
warn_unreachable = true
disallow_any_generics = true
disallow_untyped_defs = true
warn_return_any = true
exclude = ["migrations/"]

[[tool.mypy.overrides]]
module = ["constance.*", "rest_framework.*"]
ignore_missing_imports = true

# MoneyField from django-money is a composite field (amount + currency) that the
# django-stubs plugin cannot introspect at analysis time, so models that use it
# get spurious `django-manager-missing` errors. Disable that one error code for
# the affected modules.
[[tool.mypy.overrides]]
module = ["apps.bookings.models", "apps.stations.models"]
disable_error_code = ["django-manager-missing"]

[tool.django-stubs]
django_settings_module = "config.settings_test"
